framework/less/components.less
/* ... */
// Sections
*[class*=atk-section] {
    &, .ui-tabs &.ui-tabs-panel.ui-widget-content {
        padding-bottom: @margin;
        padding-top: @margin;
        &.atk-section-small {
            padding-bottom: round(@margin/2, 2);
            padding-top: round(@margin/2, 2);
        }
        &.atk-section-large {
            padding-bottom: @margin*2;
            padding-top: @margin*2;
        }
        &.atk-section-reset {
            padding-top: 0;
            padding-bottom: 0;
        }
    }
}

// Shapes
.atk-shape-rectangle {
    border-radius: 0;
}
.atk-shape-rounded {
    &, img& {
        .border-radius(@cornerRadius);
    }
}
.atk-shape-circle {
    &, img& {
        .border-radius(50%);
    }
}


// ==========================================================
// Colors
// ==========================================================

.colorCheck (@a) when (luma(@a) >= @swatchText) {
  color: black;
}
.colorCheck (@a) when (luma(@a) < @swatchText) {
  color: white;
}

// Swatches
.createSwatch(@color) {
    .@{color} {
        background: @@color;
        border-color: @@color;
        &, a:link& {
            .colorCheck(@@color);
        }
        hr {
            border-color: #000;
        }
        a, h1, h2, h3, h4, h5, h6 {
            .colorCheck(@@color);
        }
        &[class*=icon-] {
            background: none;
            color: @@color;
            &[class*=atk-shape] {
                .colorCheck(@@color);
                background: @@color;
            }
            &:hover {
                background: none;
                color: @@color;
            }
        }
        a&:hover, &[class*=atk-button]:hover {
            .colorCheck(@@color);
            background: lighten(@@color, 5%);
        }
        &[class*='atk-button'], &.atk-label, .atk-table td&, .atk-table th&, >.atk-popover-arrow:before { 
            .colorCheck(@@color);
            background: @@color;
            border-color: @@color;
        }
        &[class*='atk-button'] {
            border-color: darken(@@color, 10%);
            &:hover {
                border-color: darken(@@color, 10%);
            }
        }
        *[class*=atk-menu] li:hover&>a {
            .colorCheck(@@color);
        }
    }
}

// Effects
*[class*=atk-effect] {
    &, &[class*='atk-button'] {
        &.atk-effect-danger {
            color: @effectDanger;
        }
        &.atk-effect-warning {
            color: @effectWarning;
        }
        &.atk-effect-success {
            color: @effectSuccess;
        }
        &.atk-effect-info {
            color: @effectInfo;
        }
    }
    &.atk-label, &[class*=atk-box] {
        color: @bodyColor;
        &.atk-effect-danger {
            @color: tint(@effectDanger, 80%);
            background: @color;
            border-color: @color;
        }
        &.atk-effect-warning {
            @color: tint(@effectWarning, 80%);
            background: @color;
            border-color: @color;
        }
        &.atk-effect-success {
            @color: tint(@effectSuccess, 80%);
            background: @color;
            border-color: @color; 
        }
        &.atk-effect-info {
            @color: tint(@effectInfo, 80%);
            background: @color;
            border-color: @color;
        }
    }
}

// States
.buttonDefault() {
    .box-shadow(0 1px 0 rgba(0,0,0,0.07));
    background: @buttonDefault;
    border: 0.1em solid @borderClickable;
    color: @bodyColor;
}
.buttonHover() {
    background: @buttonHover;
    border: 0.1em solid @borderClickable;
    color: @bodyColor;
}
.buttonActive() {
    background: @buttonActive;
    border: 0.1em solid @borderClickable;
    color: @bodyColor;
}
.atk-disabled {
    .opacity(50);
    pointer-events: none;
}

// Special Effects
.atk-blur {
    .blur(@blur);
}

